# ksp-naboj-web

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  compose.yml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  run_tests.py  start.sh
.github/workflows/: build.yml
.opencode/plans/: FRONTEND-PLAN.md
ksp-naboj/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
ksp-naboj/competition/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
ksp-naboj/competition/management/commands/: seed_testdata.py
ksp-naboj/competition/migrations/: 0001_initial.py  0002_competition_end_at_competition_start_at.py
ksp-naboj/competition/templates/competition/: competition.html
ksp-naboj/problem/: admin.py  apps.py  models.py  tests.py
ksp-naboj/problem/migrations/: 0001_initial.py
ksp-naboj/styles/: apps.py
ksp-naboj/styles/src/: app.css  app.js  build.mjs
ksp-naboj/styles/src/controllers/: monaco-editor_controller.js  problem-list_controller.js  (+3 more)
ksp-naboj/styles/static/: .gitignore
ksp-naboj/styles/templates/: base.html
ksp-naboj/styles/templatetags/: forms.py  version.py
ksp-naboj/submission/: admin.py  apps.py  models.py  tests.py  views.py
ksp-naboj/submission/migrations/: 0001_initial.py  0002_initial.py
ksp-naboj/team/: admin.py  apps.py  models.py  services.py  signals.py  tests.py  tests_services.py
ksp-naboj/team/migrations/: 0001_initial.py  0002_teamprogress_highest_unlocked_order.py
ksp-naboj/users/: apps.py  auth.py  models.py  urls.py
ksp-naboj/users/migrations/: 0001_initial.py
(+9 files in other folders)
